force-app/main/default/objects/Work_Experience__c/Work_Experience__c.object-meta.xml
<CustomObject>
    <description>The total work experience of the candidate which includes</description>
    <label>Work Experience</label>
    <nameField>
        <label>Designation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Experience</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>