force-app/main/default/objects/Work_Experience__c/fields/CandidateId__c.field-meta.xml
<CustomField>
    <fullName>CandidateId__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate_Details__c</referenceTo>
    <relationshipLabel>Work Experience</relationshipLabel>
    <relationshipName>Work_Experience</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>