force-app/main/default/objects/Work_Experience__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>city where the candidate worked</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>