force-app/main/default/objects/Work_Experience__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>country where the city was located</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>