force-app/main/default/objects/Work_Experience__c/fields/Is_Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if it&apos;s you are currently working here.</description>
    <inlineHelpText>Check if it&apos;s you are currently working here.</inlineHelpText>
    <label>Is Current Company?</label>
    <type>Checkbox</type>
</CustomField>