force-app/main/default/objects/Work_Experience__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>