force-app/main/default/objects/Work_Experience__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Skills that the candidate gained at the job</description>
    <label>Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>